[gd_scene load_steps=11 format=3 uid="uid://da4bsysmp1y3b"]

[ext_resource type="Script" path="res://scripts/managers/level_manager.gd" id="1_cjcjh"]
[ext_resource type="PackedScene" uid="uid://dv3310yqnj1qf" path="res://scenes/environment/background.tscn" id="2_soou5"]
[ext_resource type="Script" path="res://scripts/environment/background.gd" id="3_vq3ae"]
[ext_resource type="PackedScene" uid="uid://mwy4myk2tlx5" path="res://scenes/player/player_ship.tscn" id="4_13lu1"]
[ext_resource type="PackedScene" uid="uid://debgrxtrsw06h" path="res://scenes/spawnables/spawner.tscn" id="5_6h2pq"]
[ext_resource type="PackedScene" uid="uid://biecpdyfl0mr7" path="res://scenes/spawnables/asteroid.tscn" id="6_pnvac"]
[ext_resource type="PackedScene" uid="uid://86hgqvpuq84x" path="res://scenes/spawnables/big_asteroid.tscn" id="7_8f4ni"]
[ext_resource type="PackedScene" uid="uid://deea4scy76i2d" path="res://scenes/spawnables/repair_kit.tscn" id="8_o33og"]
[ext_resource type="PackedScene" uid="uid://diu17l5finy3s" path="res://scenes/spawnables/speed_boost.tscn" id="9_chun7"]
[ext_resource type="PackedScene" uid="uid://bylnk5ku5vrtg" path="res://scenes/ui/hud.tscn" id="9_muoye"]

[node name="Level2" type="Node2D"]

[node name="LevelManager" type="Node2D" parent="." node_paths=PackedStringArray("hud", "background", "spawners")]
script = ExtResource("1_cjcjh")
hud = NodePath("../HUD")
background = NodePath("../Background")
spawners = [NodePath("../Spawners/AsteroidsSpawner"), NodePath("../Spawners/RepairKitSpawner"), NodePath("../Spawners/BigAsteroidsSpawner"), NodePath("../Spawners/SpeedBoostSpawner")]
atmospheres = [{
"overheat_rate": 0.01,
"threshold": 0.0
}, {
"overheat_rate": 0.02,
"threshold": 0.5
}, {
"overheat_rate": 0.03,
"threshold": 0.75
}]

[node name="Background" parent="." instance=ExtResource("2_soou5")]
scale = Vector2(0.25, 0.25)
script = ExtResource("3_vq3ae")
zoom_speed = 8

[node name="PlayerShip" parent="." node_paths=PackedStringArray("level_manager", "target") instance=ExtResource("4_13lu1")]
position = Vector2(400, 2.08165e-12)
level_manager = NodePath("../LevelManager")
target = NodePath("../Target")
threshold = 200

[node name="Target" type="Marker2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="AsteroidsSpawner" parent="Spawners" node_paths=PackedStringArray("origin") instance=ExtResource("5_6h2pq")]
origin = NodePath("../../Target")
should_spawn = true
spawn_rate = 0.25
spawn_iteration_max_entities = 4
entity_scene = ExtResource("6_pnvac")
entity_lifespan = 7.0
entity_min_speed = 300.0
entity_max_speed = 450.0

[node name="BigAsteroidsSpawner" parent="Spawners" node_paths=PackedStringArray("origin") instance=ExtResource("5_6h2pq")]
origin = NodePath("../../Target")
should_spawn = true
spawn_rate = 1.0
spawn_iteration_max_entities = 1
entity_scene = ExtResource("7_8f4ni")
entity_lifespan = 7.0
entity_min_speed = 200.0

[node name="RepairKitSpawner" parent="Spawners" node_paths=PackedStringArray("origin") instance=ExtResource("5_6h2pq")]
origin = NodePath("../../Target")
should_spawn = true
spawn_rate = 3.0
spawn_iteration_max_entities = 2
entity_scene = ExtResource("8_o33og")
entity_lifespan = 7.0
entity_min_speed = 100.0
entity_max_speed = 200.0

[node name="SpeedBoostSpawner" parent="Spawners" node_paths=PackedStringArray("origin") instance=ExtResource("5_6h2pq")]
origin = NodePath("../../Target")
should_spawn = true
spawn_rate = 4.0
spawn_iteration_max_entities = 1
entity_scene = ExtResource("9_chun7")
entity_lifespan = 7.0
entity_min_speed = 100.0
entity_max_speed = 200.0

[node name="HUD" parent="." instance=ExtResource("9_muoye")]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="SFXStream_Collision" type="AudioStreamPlayer2D" parent="."]

[node name="SFXStream_Ship" type="AudioStreamPlayer2D" parent="."]
